HybridIdentity-Single-Site-ADFSwithWID-WAP-ADConnect/nestedtemplates/NetworkSecurityGroup.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
    "networkSecurityGroupName": {
      "type": "string",
      "metadata": {
        "description": "VNet name"
      }
    },
    "WAP1PrivateIP": {
      "type": "string",
      "metadata": {
        "description": "WAP1 Private IP Address"
      }
    },       
    "location": {
        "type": "string",
        "metadata": {
          "description": "Region of Resources"
        }
      }
    },
    "resources": [
      {
        "apiVersion": "2019-04-01",
        "type": "Microsoft.Network/networkSecurityGroups",
        "name": "[parameters('networkSecurityGroupName')]",
        "location": "[parameters('location')]",
        "properties": {
          "securityRules": [
            {
              "name": "HTTPS",
              "properties": {
                "description": "Opens Port HTTP (Port 443/TCP)",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "443",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "[parameters('WAP1PrivateIP')]",
                "access": "Allow",
                "priority": 100,
                "direction": "Inbound"
              }
            },
            {
              "name": "ADFSAUTH",
              "properties": {
                "description": "Opens Port ADFSAUTH (Port 49443/TCP)",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "49443",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "[parameters('WAP1PrivateIP')]",
                "access": "Allow",
                "priority": 200,
                "direction": "Inbound"
              }
            }             
          ]
        }
      }
    ]
  }
